--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Slovak Charity</title>
+	<link rel="stylesheet" href="CSS/styles.css">
+</head>
+<body>
+    <header>
+	<h1>About Us</h1>
+             <p> The Slovak Community Charity is dedicated to bringing together the Slovak community in South Manchester and surrounding areas. Our mission is to preserve Slovak culture by offering educational programs and hosting workshops and events for both children and adults. We strive to create a welcoming space where everyone can connect, learn, and celebrate our traditions. Join us in strengthening our community and keeping the Slovak spirit alive.  </p></header>
+    <nav>...</nav>
+    <main>...</main>
+    <footer>...</footer>
+</body>
+</html>
