--- a/index.html
+++ b/index.html
@@ -1,15 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Slovak Charity</title>
-	<link rel="stylesheet" href="CSS/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About us</title>
+    <style>
+        body {
+            background: #EFF0E0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        header {
+            background: #B22B2B;
+            padding: 20px;
+            position: relative;
+        }
+        header img {
+            float: right;
+            max-width: 100px;
+            height: auto;
+        }
+        h1 {
+            background: #A6A19F;
+            padding: 10px;
+            margin: 0;
+            text-align: left;
+        }
+        nav {
+            background: #333;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        .main {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+        }
+        .content {
+            flex: 1;
+        }
+        .image img {
+            max-width: 100%;
+            height: auto;
+        }
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-	<h1>About Us</h1>
-             <p> The Slovak Community Charity is dedicated to bringing together the Slovak community in South Manchester and surrounding areas. Our mission is to preserve Slovak culture by offering educational programs and hosting workshops and events for both children and adults. We strive to create a welcoming space where everyone can connect, learn, and celebrate our traditions. Join us in strengthening our community and keeping the Slovak spirit alive.  </p></header>
-    <nav>...</nav>
-    <main>...</main>
-    <footer>...</footer>
+<header>
+    <img src="image/LOGO.png" alt="Slovak Charity Logo">
+    <h1>Welcome to Slovak Charity About us Page</h1>
+</header>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="dates_fees.html">Dates & Fees</a>
+    <a href="registration.html">Registration</a>
+    <a href="payment.html">Payment</a>
+    <a href="events.html">Events & Projects</a>
+</nav>
+<div class="main">
+    <div class="content">
+        <h2>About Slovenské Vzdelávacie Centrum Manchester </h2>
+        <p>We are a local Slovak charity dedicated to helping…….</p>
+    </div>
+    <div class="image">
+        <img src="https://th.bing.com/th/id/OIP.NtdGWERFC_J_DbW_gSJiTAHaE7?w=220&h=180&c=7&r=0&o=5&pid=1.7" alt="Helping Hands">
+    </div>
+</div>
+<footer>
+    <p>&copy; 2025 Slovak Charity. All rights reserved.</p>
+</footer>
 </body>
 </html>
